// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render \`Default\` size with \`Header\` and \`Footer\` 1`] = `
<div>
  <div
    class="cds-modal cds-modal--default"
  >
    <button
      class="cds-modal__button--close"
      type="button"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 256 256"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
        />
      </svg>
    </button>
    <div
      class="cds-modal__header"
    >
      Title
    </div>
    <div
      class="cds-modal__body"
    >
      <div>
        Slot
      </div>
    </div>
    <div
      class="cds-modal__footer"
    >
      <button
        class="cds-button--secondary cds-button--medium"
      >
        Button 2
      </button>
      <button
        class="cds-button--primary cds-button--medium"
      >
        Button 1
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal should render \`Default\` size without \`Header\` and \`Footer\` 1`] = `
<div>
  <div
    class="cds-modal cds-modal--small"
  >
    <button
      class="cds-modal__button--close"
      type="button"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 256 256"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
        />
      </svg>
    </button>
    <div
      class="cds-modal__header"
    >
      Title
    </div>
    <div
      class="cds-modal__body"
    >
      <div>
        Slot
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render \`Small\` size without \`Footer\` 1`] = `
<div>
  <div
    class="cds-modal cds-modal--small"
  >
    <button
      class="cds-modal__button--close"
      type="button"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 256 256"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
        />
      </svg>
    </button>
    <div
      class="cds-modal__header"
    >
      Title
    </div>
    <div
      class="cds-modal__body"
    >
      <div>
        Slot
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render \`Wide\` size without \`Header\` 1`] = `
<div>
  <div
    class="cds-modal cds-modal--wide"
  >
    <button
      class="cds-modal__button--close"
      type="button"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 256 256"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
        />
      </svg>
    </button>
    <div
      class="cds-modal__body"
    >
      <div>
        Slot
      </div>
    </div>
    <div
      class="cds-modal__footer"
    >
      <button
        class="cds-button--secondary cds-button--medium"
      >
        Button 2
      </button>
      <button
        class="cds-button--primary cds-button--medium"
      >
        Button 1
      </button>
    </div>
  </div>
</div>
`;
